[package]
name = "quikcrypt"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
clap = { version = "4.5.54", features = ["derive"] }
color-eyre = "0.6.5"
dirs = "6.0.0"
rand_core = { version = "0.9.5", features = ["os_rng"] }
rpassword = "7.4.0"
zeroize = "1.8.2"
